--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt,a4paper,oneside]{article}
-\usepackage[a4paper,left=3cm,right=2cm,top=2.5cm,bottom=2.5cm]{geometry}
+\usepackage[a4paper,left=3cm,right=2cm,top=2cm,bottom=2.5cm,footskip=4mm]{geometry}
 \usepackage{graphicx}
 \usepackage{verbatim}
 \usepackage{listings}
@@ -11,6 +11,8 @@
 \usepackage{abstract}
 \usepackage{parcolumns}
 \usepackage[hidelinks]{hyperref}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
 \renewcommand{\abstractnamefont}{\normalfont\Large\bfseries}
 \graphicspath{{img/}}
 
@@ -33,6 +35,13 @@
 \usepackage{nomencl}
 \makenomenclature
 \renewcommand{\nomname}{Acronyms}
+
+\renewcommand{\headrulewidth}{0pt}
+\fancyhead{}
+\fancyhead[RO,LE]{\includegraphics[scale=0.11]{img/smile.png}}
+\fancyfoot{}
+\fancyfoot[LE,CO]{\thepage}
+%\rhead{\includegraphics[scale=0.1]{img/smile.png}}
 
 \begin{document}
 %----------------------------------------------------------------------------------------
@@ -861,7 +870,6 @@ Possible causes:
   \end{itemize}
 \end{itemize}
 
-\newpage
 \section*{Update - 9 March 2018}
 
 \subsection*{Full host-llvm}
