--- a/tex/main.tex
+++ b/tex/main.tex
@@ -99,6 +99,7 @@
 
 \end{titlepage}
 
+
 \iffalse
 \begin{abstract}
 
@@ -106,6 +107,25 @@
 \newpage
 \fi
 
+\vspace*{50px}
+\section*{Acknowledgements}
+\vspace*{30px}
+\thispagestyle{empty}
+I would like to thank my tutor, Romain Naour, for his continuous guidance and
+feedback throughout this project. It would not have been possible without his
+help and expertise. I would also like to thank Smile for trusting and supporting
+me since the beginning of my internship.\\\\
+Another person who made this possible is my supervisor, Yasmina Abdedda\"{i}m.
+She has encouraged me and offered me a listening ear at all times, which gave
+me the strength to continue when I was about to give up.\\\\
+Additionally, I want to thank the Buildroot community for taking the time to
+review my contributions and give me the necessary feedback to make the project
+go in the right direction.\\\\
+Finally, I want to thank my parents and sister. They know how hard it is for me to
+be so far from them but they continue to bring me their support and motivation
+everyday despite the distance.
+
+\newpage
 \tableofcontents
 
 \newpage
