add img to explain llvm-config

--- a/presentations/smile/presentation.tex
+++ b/presentations/smile/presentation.tex
@@ -386,6 +386,13 @@ ESIEE Paris \\~\\
 \end{frame}
 
 \begin{frame}
+\frametitle{LLVM packaging for Buildroot}
+\begin{figure}
+\includegraphics[width=1\linewidth]{img/llvm_config.png}
+\end{figure}
+\end{frame}
+
+\begin{frame}
 \frametitle{LLVM support for Mesa 3D drivers}
 \begin{itemize}
   \item Gallium llvmpipe: fastest software rasterizer for Mesa
@@ -412,14 +419,14 @@ ESIEE Paris \\~\\
   \end{tabular}
 \end{frame}
 
-\iffalse
+%\iffalse
 \begin{frame}
 \frametitle{Selecting llvmpipe}
 \begin{figure}
 \includegraphics[width=1\linewidth]{img/mesa_swrast.png}
 \end{figure}
 \end{frame}
-\fi
+%\fi
 
 %-------------------------------------------------------
 \section{OpenCL}
